# bt-obd-gw

./: Cargo.toml  README.md  sdkconfig.defaults
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh
src/: bt.rs  elm327.rs  error.rs  main.rs  spp_handler.rs
src/espidf/: bt_singleton.rs  mod.rs  mutex.rs  spp.rs
src/experimental/: espnow.rs
