[package]
name = "bt-obd-gw"
version = "0.1.0"
authors = ["ferdy"]
edition = "2021"
resolver = "2"
rust-version = "1.88"

[[bin]]
name = "bt-obd-gw"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

[dependencies]
log = "0.4"
esp-idf-svc = {version = "0.51", features = ["experimental"]}

embedded-svc = { version = "0.28.1", default-features = false }
anyhow = "1.0.97"
thiserror = "2.0.12"
heapless = "0.9.1"
circular-buffer = "1.1.0"

# For ESP IDF SPP
num_enum = { version = "0.7", default-features = false }

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
embuild = "0.33"

[patch.crates-io]
esp-idf-svc = { git = "https://github.com/ferdy-lw/esp-idf-svc.git", branch = "add-bt-classic-spp"}